# evaluating-ai-tutors

./: .gitignore  README.md  education_eval_training.ipynb  judge_external.py  prepare_data.py  pyproject.toml  setup.py  test.py  testing_results.txt  tutor_eval_data.json
